--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import "prismjs/themes/prism-tomorrow.css"; 
 @theme {
     --font-poppins: Poppins, sans-serif;
 }
